@@ -1,0 +1,8 @@
+
+### OTCmd2_ini
+
+    Settings for OTCmd2 are in a configobj .ini file that by default is
+    found in the same place that the OTCmd2.py file is found, but you can
+    use the OTCmd2.py '-c' or '--config' command-line option to specify
+    an alternate location. It uses configobj with unrepr=True
+    so the values are Python, not just strings.
